iac/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: nginx
          image: gitea.rubensminoru.com/rubens.bueno/portfolio:098b772d3f1ed22db389a24ac99a5e94afde4c53
          ports:
            - containerPort: 80
